--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "keywords": [
     "openapi",
     "php"
-  ]
+  ],
+  "scripts": {
+    "generate": "openapi-generator-cli generate -g php -i ./openapi-specification/examples/v3.0/petstore.yaml -o ./examples/petstore -t ./templates"
+  },
+  "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.5.2"
+  }
 }
