--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "openapi",
     "php"
   ],
+  "files": [
+    "templates/*",
+    "LICENCE.md",
+    "README.md"
+  ],
   "scripts": {
-    "generate": "openapi-generator-cli generate -g php -i ./openapi-specification/examples/v3.0/petstore.yaml -o ./examples/petstore -t ./templates"
+    "petstore:generate": "openapi-generator-cli generate -g php -i ./openapi-specification/examples/v3.0/petstore.yaml -o ./examples/petstore -t ./templates",
+    "petstore:install": "cd examples/petstore && composer i",
+    "petstore:lint": "cd examples/petstore && vendor/bin/php-cs-fixer fix --dry-run -vv"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2"
