--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "README.md"
   ],
   "scripts": {
-    "petstore:generate": "openapi-generator-cli generate -g php -i ./openapi-specification/examples/v3.0/petstore.yaml -o ./examples/petstore -t ./templates",
+    "petstore:generate": "openapi-generator-cli generate -g php -i ./examples/petstore.yaml -o ./examples/petstore -t ./templates",
     "petstore:install": "cd examples/petstore && composer i",
     "petstore:lint": "cd examples/petstore && vendor/bin/php-cs-fixer fix -vv --diff --dry-run"
   },
