fix: Use mixed on value type

--- a/examples/petstore.yaml
+++ b/examples/petstore.yaml
@@ -99,8 +99,10 @@ components:
           format: int64
         name:
           type: string
-        tag:
-          type: string
+        tags:
+          type: array
+          items:
+            type: string
         kind:
           $ref: '#/components/schemas/PetKind'
     Pets:
