--- a/.github/workflows/petstore.yaml
+++ b/.github/workflows/petstore.yaml
@@ -11,6 +11,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        php:
+          - 8.1
+          - 8.2
     steps:
       - uses: actions/checkout@v3
 
@@ -18,6 +23,10 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
 
       - run: npm ci
       - run: npm run petstore
